--- a/10A - Monitoring a Model.ipynb
+++ b/10A - Monitoring a Model.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Monitoring a Model\n",
+    "# モデルの監視\n",
     "\n",
-    "When you've deployed a model into production as a service, you'll want to monitor it to track usage and explore the requests it processes. In this lab, you'll use Azure Application Insights to monitor activity for a model service endpoint.\n",
+    "モデルをサービスとして実稼働環境にデプロイしたら、使用状況を追跡して処理するリクエストを調査するためにモデルを監視する必要があります。このラボでは、Azure Application Insightsを使用して、モデルサービスエンドポイントのアクティビティを監視します。\n",
     "\n",
     "\n",
-    "## Connect to Your Workspace\n",
+    "## ワークスペースに接続する\n",
     "\n",
-    "The first thing you need to do is to connect to your workspace using the Azure ML SDK.\n",
+    "最初に行う必要があるのは、Azure ML SDKを使用してワークスペースに接続することです。\n",
     "\n",
-    "> **Note**: If the authenticated session with your Azure subscription has expired since you completed the previous exercise, you'll be prompted to reauthenticate."
+    "> **Note**: 前の演習を完了してから、Azureサブスクリプションとの認証済みセッションの有効期限が切れた場合、再認証するように求められます。"
    ]
   },
   {
@@ -33,13 +33,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare a Model for Deployment\n",
+    "## 展開のためのモデルの準備\n",
     "\n",
-    "Now we need a model to deploy. Run the code below to:\n",
+    "次に、デプロイするモデルが必要です。以下のコードを実行して:\n",
     "\n",
-    "1. Create and register a dataset.\n",
-    "2. Train a model using the dataset.\n",
-    "3. Register the model."
+    "1. データセットを作成して登録します。\n",
+    "2. データセットを使用してモデルをトレーニングします。\n",
+    "3. モデルを登録します。"
    ]
   },
   {
@@ -133,11 +133,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Deploy a Model as a Web Service\n",
+    "## モデルをWebサービスとしてデプロイする\n",
     "\n",
-    "Now you're ready to deploy the registered model as a web service.\n",
+    "これで、登録済みモデルをWebサービスとしてデプロイする準備が整いました。\n",
     "\n",
-    "First, create a folder for the deployment configuration files"
+    "最初に、展開構成ファイル用のフォルダーを作成します"
    ]
   },
   {
@@ -157,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now you need an entry script that the service will use to score new data."
+    "ここで、サービスが新しいデータのスコアリングに使用するエントリスクリプトが必要です。"
    ]
   },
   {
@@ -202,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You'll also need a Conda configuration file for the service environment."
+    "サービス環境用のConda構成ファイルも必要です。"
    ]
   },
   {
@@ -234,9 +234,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now you can deploy the service (in this case, as an Azure Container Instance (ACI).\n",
+    "これで、サービスをデプロイできます（この場合、Azure Container Instance（ACI）として）。\n",
     "\n",
-    "> **Note**: This can take a few minutes - wait until the state is shown as **Healthy**."
+    "> **Note**: これには数分かかることがあります-状態が**Healthy**と表示されるまで待ちます."
    ]
   },
   {
@@ -270,9 +270,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Enable Application Insights\n",
+    "## Application Insightsを有効にする\n",
     "\n",
-    "Next, you need to enable Application Insights for the service."
+    "次に、サービスのApplication Insightsを有効にする必要があります。"
    ]
   },
   {
@@ -290,11 +290,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Use the Web Service\n",
+    "## Webサービスを使用する\n",
     "\n",
-    "With the service deployed, now you can consume it from a client application.\n",
+    "サービスがデプロイされたら、クライアントアプリケーションからサービスを利用できるようになりました。\n",
     "\n",
-    "First, determine the URL to which these applications must submit their requests."
+    "最初に、これらのアプリケーションがリクエストを送信する必要があるURLを決定します。"
    ]
   },
   {
@@ -311,9 +311,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that you know the endpoint URI, an application can simply make an HTTP request, sending the patient data in JSON (or binary) format, and receive back the predicted class(es).\n",
+    "エンドポイントURIがわかったので、アプリケーションは単純にHTTPリクエストを行い、患者データをJSON（またはバイナリ）形式で送信し、予測されたクラスを受け取ることができます。\n",
     "\n",
-    "> **Tip**: If an error occurs because the service endpoint isn't ready. Wait a few seconds and try again!"
+    "> **Tip**: サービスエンドポイントの準備ができていないためにエラーが発生した場合。数秒待ってからもう一度試してください！"
    ]
   },
   {
@@ -350,30 +350,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now you can view the data logged for the service endpoint:\n",
-    "1. In the [Azure portal](https://portal.azure.com), open your Machine Learning workspace.\n",
-    "2. On the **Overview** page, click the link for the associated **Application Insights** resource.\n",
-    "3. On the Application Insights blade, click **Logs (Analytics)**. \n",
+    "これで、サービスエンドポイントについて記録されたデータを表示できます。\n",
+    "1. [Azureポータル](https://portal.azure.com)で、Machine Learningワークスペースを開きます。\n",
+    "2. [**概要**]ページで、関連する**Application Insights**リソースのリンクをクリックします。\n",
+    "3. Application Insightsブレードで、[**ログ（分析）**]をクリックします。 \n",
     "\n",
-    "    > **Note**: If this is the first time you've opened log analytics, you may need to click **Get Started** to open the query editor. If a tip explaining how to write a query is displayed, close it.\n",
+    "    > **Note**: ログ分析を初めて開く場合は、[**はじめに**]をクリックしてクエリエディターを開く必要があります。クエリの作成方法を説明するヒントが表示されたら、閉じます。\n",
     "\n",
-    "4. Paste the following query into the query editor and click **Run**\n",
+    "4. 次のクエリをクエリエディターに貼り付け、[実行]をクリックします**\n",
     "    ```\n",
     "    traces\n",
     "    |where  message == \"STDOUT\"\n",
     "      and customDimensions.[\"Service Name\"] == \"diabetes-service-app-insights\"\n",
     "    |project timestamp, customDimensions.Content\n",
     "    ```\n",
-    "5. View the results. At first there may be none, because an ACI web service can take two to three minutes to send the telemetry to Application Insights. Wait a few minutes and re-run the query until you see the logged data and predictions."
+    "5. 結果を表示します。 ACI Webサービスは、テレメトリをApplication Insightsに送信するのに2〜3分かかるため、最初は何もありません。数分待ってから、ログに記録されたデータと予測が表示されるまでクエリを再実行します."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Delete the Service\n",
+    "## サービスを削除する\n",
     "\n",
-    "When you no longer need your service, you should delete it to avoid incurring unecessary charges."
+    "不要になったサービスは、不要な料金が発生しないように削除する必要があります。"
    ]
   },
   {
@@ -389,7 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For more information about using Application Insights to monitor a deployed service, see the [Azure Machine Learning documentation](https://docs.microsoft.com/azure/machine-learning/how-to-enable-app-insights)."
+    "Application Insightsを使用して展開されたサービスを監視する方法の詳細については、 [Azure Machine Learning documentation](https://docs.microsoft.com/azure/machine-learning/how-to-enable-app-insights)を参照してください。"
    ]
   }
  ],
