--- a/10B - Monitoring Data Drift.ipynb
+++ b/10B - Monitoring Data Drift.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Monitoring Data Drift\n",
+    "# データドリフトの監視\n",
     "\n",
-    "Over time, models can become less effective at predicting accurately due to changing trends in feature data. This phenomenon is known as *data drift*, and it's important to monitor your machine learning solution to detect it so you can retrain your models if necessary.\n",
+    "時間が経つにつれて、モデルは、機能データの変化する傾向により、正確に予測する効果が低下する可能性があります。この現象は「データドリフト」と呼ばれ、必要に応じてモデルを再トレーニングできるように、機械学習ソリューションを監視して検出することが重要です。\n",
     "\n",
-    "In this lab, you'll configure data drift monitoring for datasets.\n",
+    "このラボでは、データセットのデータドリフトモニタリングを設定します。\n",
     "\n",
-    "## Connect to Your Workspace\n",
+    "## ワークスペースに接続する\n",
     "\n",
-    "The first thing you need to do is to connect to your workspace using the Azure ML SDK.\n",
+    "最初に行う必要があるのは、Azure ML SDKを使用してワークスペースに接続することです。\n",
     "\n",
-    "> **Note**: If the authenticated session with your Azure subscription has expired since you completed the previous exercise, you'll be prompted to reauthenticate."
+    "> **Note**: 前の演習を完了してから、Azureサブスクリプションとの認証済みセッションの有効期限が切れた場合、再認証するように求められます。"
    ]
   },
   {
@@ -34,9 +34,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a Baseline Dataset\n",
+    "## ベースラインデータセットを作成する\n",
     "\n",
-    "To monitor a dataset for data drift, you must register a *baseline* dataset (usually the dataset used to train your model) to use as a point of comparison with data collected in the future. "
+    "データドリフトのデータセットを監視するには、*ベースライン*データセット（通常、モデルのトレーニングに使用されるデータセット）を登録して、将来収集されるデータとの比較ポイントとして使用する必要があります。 "
    ]
   },
   {
@@ -71,9 +71,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a Target Dataset\n",
+    "## ターゲットデータセットを作成する\n",
     "\n",
-    "Over time, you can collect new data with the same features as your baseline training data. To compare this new data to the baseline data, you must define a target dataset that includes the features you want to analyze for data drift as well as a timestamp field that indicates the point in time when the new data was current -this enables you to measure data drift over temporal intervals. The timestamp can either be a field in the dataset itself, or derived from the folder and filename pattern used to store the data. For example, you might store new data in a folder hierarchy that consists of a folder for the year, containing a folder for the month, which in turn contains a folder for the day; or you might just encode the year, month, and day in the file name like this: *data_2020-01-29.csv*; which is the approach taken in the following code:"
+    "時間が経つにつれて、ベースライントレーニングデータと同じ機能を備えた新しいデータを収集できます。この新しいデータをベースラインデータと比較するには、データドリフトを分析する機能を含むターゲットデータセットと、新しいデータが最新であった時点を示すタイムスタンプフィールドを定義する必要があります。これにより、時間間隔でのデータドリフトを測定します。タイムスタンプは、データセット自体のフィールドにすることも、データの保存に使用するフォルダーとファイル名のパターンから派生させることもできます。たとえば、月のフォルダーを含む年のフォルダーと、その日のフォルダーを含むフォルダー階層で新しいデータを保存できます。または、次のようにファイル名に年、月、日をエンコードすることもできます。*data_2020-01-29.csv*;これは、次のコードで採用されているアプローチです。"
    ]
   },
   {
@@ -136,11 +136,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a Data Drift Monitor\n",
+    "## データドリフトモニターを作成する\n",
     "\n",
-    "Now you're ready to create a data drift monitor for the diabetes data. The data drift monitor will run periodicaly or on-demand to compare the baseline dataset with the target dataset, to which new data will be added over time.\n",
+    "これで、糖尿病データのデータドリフトモニターを作成する準備が整いました。データドリフトモニターは定期的にまたはオンデマンドで実行され、ベースラインデータセットとターゲットデータセットを比較します。ターゲットデータセットには、新しいデータが徐々に追加されます。\n",
     "\n",
-    "You can specify the features you want to monitor for data drift, the name of the compute target to be used to run the monitoring process, the frequency at which the data should be compared, the data drift threshold above which an alert should be triggered, and the latency (in hours) to allow for data collection."
+    "データドリフトを監視する機能、監視プロセスの実行に使用する計算ターゲットの名前、データを比較する頻度、アラートがトリガーされるデータドリフトのしきい値、データの収集を可能にする待ち時間（時間単位）。"
    ]
   },
   {
@@ -168,11 +168,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Backfill the Monitor\n",
+    "## モニターのバックフィル\n",
     "\n",
-    "You have a baseline dataset and a target dataset that includes simulated weekly data collection for six weeks. You can use this to backfill the monitor so that it can analyze data drift between the original baseline and the target data.\n",
+    "6週間のシミュレートされた毎週のデータ収集を含むベースラインデータセットとターゲットデータセットがあります。これを使用してモニターを埋め戻し、元のベースラインとターゲットデータ間のデータドリフトを分析できます。\n",
     "\n",
-    "> **Note** This may take some time to run, as the compute target must be started to run the backfill analysis. The widget may not always update to show the status, so click the link to observe the experiment status in Azure Machine Learning studio!"
+    "> **Note** バックフィル分析を実行するには計算ターゲットを起動する必要があるため、これには実行に時間がかかる場合があります。ウィジェットが常に更新されてステータスが表示されるとは限らないため、リンクをクリックして、Azure Machine Learning Studioで実験ステータスを確認してください！"
    ]
   },
   {
@@ -193,9 +193,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analyze Data Drift\n",
+    "## データドリフトの分析\n",
     "\n",
-    "You can use the following code to examine data drift for the points in time collected in the backfill run."
+    "次のコードを使用して、バックフィル実行で収集された時点のデータドリフトを調べることができます。"
    ]
   },
   {
@@ -213,21 +213,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also visualize the data drift metrics in [Azure Machine Learning studio](https://ml.azure.com) by following these steps:\n",
+    "次の手順に従って、[Azure Machine Learning studio](https://ml.azure.com)でデータドリフトメトリックを視覚化することもできます。\n",
     "\n",
-    "1. On the **Datasets** page, view the **Dataset monitors** tab.\n",
-    "2. Click the data drift monitor you want to view.\n",
-    "3. Select the date range over which you want to view data drift metrics (if the column chart does not show multiple weeks of data, wait a minute or so and click **Refresh**).\n",
-    "4. Examine the charts in the **Drift overview** section at the top, which show overall drift magnitude and the drift contribution per feature.\n",
-    "5. Explore the charts in the **Feature detail** section at the bottom, which enable you to see various measures of drift for individual features.\n",
+    "1. [**データセット**]ページで、[**データセットモニター**]タブを表示します。\n",
+    "2. 表示するデータドリフトモニターをクリックします。\n",
+    "3. データドリフトメトリックを表示する日付範囲を選択します（列グラフに複数週間のデータが表示されない場合は、1分ほど待ってから[**更新**]をクリックします）。\n",
+    "4. 上部の**ドリフトの概要**セクションのチャートを調べてください。これは、全体的なドリフトの大きさとフィーチャごとのドリフトの寄与を示しています。\n",
+    "5. 下部の[**機能の詳細**]セクションのグラフをご覧ください。個々の機能のさまざまなドリフトの測定値を確認できます。\n",
     "\n",
-    "> **Note**: For help understanding the data drift metrics, see the [How to monitor datasets](https://docs.microsoft.com/azure/machine-learning/how-to-monitor-datasets#understanding-data-drift-results) in the Azure Machine Learning documentation.\n",
+    "> **Note**: データドリフトメトリックの理解については、次の[データセットを監視する方法](https://docs.microsoft.com/azure/machine-learning/how-to-monitor-datasets#understanding-data-drift-results)を参照してください。 Azure Machine Learningのドキュメント。\n",
     "\n",
-    "## Explore Further\n",
+    "## さらに探索する\n",
     "\n",
-    "This lab is designed to introduce you to the concepts and principles of data drift monitoring. To learn more about monitoring data drift using datasets, see the [Detect data drift on datasets](https://docs.microsoft.com/azure/machine-learning/how-to-monitor-datasets) in the Azure machine Learning documentation.\n",
+    "このラボは、データドリフトモニタリングの概念と原理を紹介するように設計されています。データセットを使用したデータドリフトの監視の詳細については、Azure machine Learningドキュメントの[データセットのデータドリフトの検出](https://docs.microsoft.com/azure/machine-learning/how-to-monitor-datasets)を参照してください。 。\n",
     "\n",
-    "You can also configure data drift monitoring for services deployed in an Azure Kubernetes Service (AKS) cluster. For more information about this, see [Detect data drift on models deployed to Azure Kubernetes Service (AKS)](https://docs.microsoft.com/azure/machine-learning/how-to-monitor-data-drift) in the Azure Machine Learning documentation.\n"
+    "Azure Kubernetes Service（AKS）クラスターにデプロイされたサービスのデータドリフトモニタリングを構成することもできます。この詳細については、「Azure Kubernetes Service（AKS）にデプロイされたモデルのデータドリフトを検出する」(https://docs.microsoft.com/azure/machine-learning/how-to-monitor-data-drift)を参照してくださいAzure Machine Learningのドキュメント。\n"
    ]
   }
  ],
