翻訳微修正

--- a/01B - Intro to the Azure ML SDK.ipynb
+++ b/01B - Intro to the Azure ML SDK.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "ほとんどの場合、ワークスペース構成をJSON構成ファイルに保存する必要があります。これにより、AzureサブスクリプションIDなどの詳細を覚える必要なく、再接続が簡単になります。 AzureポータルのワークスペースのブレードからJSON構成ファイルをダウンロードできますが、ワークスペース内でコンピューティングインスタンスを使用している場合、構成ファイルは既にルートフォルダーにダウンロードされています。\n",
     "\n",
-    "以下のコードは、構成ファイルを使用してワークスペースに接続します。ノートブックセッションで初めて実行する場合は、https：//microsoft.com/deviceloginリンクをクリックして、自動生成されたコードを入力し、Azureにサインインすることにより、Azureにサインインするように求められます。サインインに成功したら、開いていたブラウザータブを閉じて、このノートブックに戻ることができます。"
+    "以下のコードは、構成ファイルを使用してワークスペースに接続します。ノートブックセッションで初めて実行する場合は、https://microsoft.com/deviceloginリンクをクリックして、自動生成されたコードを入力し、Azureにサインインすることにより、Azureにサインインするように求められます。サインインに成功したら、開いていたブラウザータブを閉じて、このノートブックに戻ることができます。"
    ]
   },
   {
