--- a/06A - Creating a Pipeline.ipynb
+++ b/06A - Creating a Pipeline.ipynb
@@ -71,9 +71,9 @@
    "source": [
     "## Create Scripts for Pipeline Steps\n",
     "\n",
-    "Pipelines consist of one or more *steps*, which can be Python scripts, or specialized steps like an Auto ML training estimator or a data transfer step that copies data from one location to another. Each step can run in its own compute context.\n",
+    "パイプラインは1つ以上の*ステップ*で構成されます。これは、Pythonスクリプト、またはAuto MLトレーニング推定器などの特殊なステップ、またはある場所から別の場所にデータをコピーするデータ転送ステップです。各ステップは、独自の計算コンテキストで実行できます。\n",
     "\n",
-    "In this exercise, you'll build a simple pipeline that contains an estimator step (to train a model) and a Python script step (to register the trained model)."
+    "この演習では、（モデルをトレーニングするための）エスティメータステップと（トレーニングされたモデルを登録するための）Pythonスクリプトステップを含む単純なパイプラインを構築します。"
    ]
   },
   {
@@ -94,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "これで、モデルをトレーニングする最初のステップのスクリプトを作成できます。スクリプトには、** output_folder **という名前のパラメーターが含まれています。このパラメーターは、トレーニング済みモデルを保存するフォルダーを参照します。"
+    "これで、モデルをトレーニングする最初のステップのスクリプトを作成できます。スクリプトには、**output_folder**という名前のパラメーターが含まれています。このパラメーターは、トレーニング済みモデルを保存するフォルダーを参照します。"
    ]
   },
   {
