--- a/07A - Creating a Real-time Inferencing Service.ipynb
+++ b/07A - Creating a Real-time Inferencing Service.ipynb
@@ -449,9 +449,9 @@
    "source": [
     "認証を必要としないAzure Container Instance（ACI）サービスとしてWebサービスをデプロイしました。これは開発とテストには適していますが、運用環境では、Azure Kubernetes Service（AKS）クラスターへのデプロイと認証の有効化を検討する必要があります。これには、REST要求に**Authorization**ヘッダーを含める必要があります。\n",
     "\n",
-    "## Delete the Service\n",
+    "## サービスを削除する\n",
     "\n",
-    "When you no longer need your service, you should delete it to avoid incurring unecessary charges."
+    "不要になったサービスは、不要な料金が発生しないように削除する必要があります。"
    ]
   },
   {
@@ -469,7 +469,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "For more information about publishing a model as a service, see the [documentation](https://docs.microsoft.com/azure/machine-learning/how-to-deploy-and-where)"
+    "モデルをサービスとして公開する方法の詳細については、[ドキュメント]（https://docs.microsoft.com/azure/machine-learning/how-to-deploy-and-where）を参照してください。"
    ]
   }
  ],
