翻訳の修正

--- a/08B - Using Automated Machine Learning.ipynb
+++ b/08B - Using Automated Machine Learning.ipynb
@@ -145,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Automated Machine learningには、[Scikit-Learn Transformationパイプライン]（https://scikit-learn.org/stable/modules/compose.html#combining-estimators）を使用して達成されるデータの前処理を試みるオプションが含まれますAzure Machine Learningパイプラインと混同しないでください！）。これらは、推論の前にデータを変換する手順を含むモデルを生成します。このようなモデルのステップを表示できます:"
+    "Automated Machine learningには、[Scikit-Learn Transformationパイプライン](https://scikit-learn.org/stable/modules/compose.html#combining-estimators)を使用して達成されるデータの前処理を試みるオプションが含まれますAzure Machine Learningパイプラインと混同しないでください！）。これらは、推論の前にデータを変換する手順を含むモデルを生成します。このようなモデルのステップを表示できます:"
    ]
   },
   {
