--- a/09B - Interpreting Models.ipynb
+++ b/09B - Interpreting Models.ipynb
@@ -391,9 +391,9 @@
     "[実行の詳細]ウィジェットのリンクをクリックして、Azure Machine Learning Studioで実行を確認し、[*explainer*]タブを表示することもできます。次に：\n",
     "\n",
     "1. explainerに**Tabular Explanation**を選択します。.\n",
-    "2. View the **Global Importance** chart, which shows the overall global feature importance.\n",
-    "3. View the **Summary Importance** chart, which shows each data point from the test data in a *swarm*, *violin*, or *box* plot.\n",
-    "4. Select an individual point to see the **Local Feature Importance** for the individual prediction for the selected data point.\n"
+    "2. 全体的なグローバル機能の重要性を示す**Global Importance**チャートを表示します。\n",
+    "3. *swarm*、*violin*、または*box*プロットのテストデータからの各データポイントを示す**Summary Importance**チャートを表示します。\n",
+    "4. 個々のポイントを選択して、選択したデータポイントの個々の予測の**Local feature importance**を表示します。\n"
    ]
   },
   {
